# haskell-servant-real-world-app

./: .stylish-haskell.yaml  README.md  ninja.cabal  servant-blog.cabal  servent-blog.postman_collection.json  stack.yaml
app/: Main.hs
src/: Api.hs  Config.hs  DB.hs  Models.hs  Types.hs
src/Api/: Article.hs  Comment.hs  Favorite.hs  Profile.hs  Registration.hs  Tag.hs  User.hs
src/Models/: Article.hs  Comment.hs  Favorite.hs  Tag.hs  Tagging.hs  User.hs  UserFollower.hs
test/: CommonImports.hs
